@@ -115,6 +115,17 @@ Flip images to give negative zspace:step value (sup-to-inf).
 \fB\-zanydirection\fR
 Don't flip images along z-axis (default).
 .TP
+\fB\-world\fR
+For ascii format, print world coordinates (spatial x, y and z) along
+with voxel value.
+.TP
+\fB\-voxel\fR
+For ascii format, print voxel coordinates along with voxel value.
+.TP
+\fB\-filter\fR \fIlow\ high\fR
+For ascii format, print only those voxels whose values are between low
+and high, inclusive.
+.TP
 \fB\-help\fR
 Print summary of command-line options and exit.
 .TP
